<resources>
    <string name="app_name">MusifyL</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="open_navdrawer">Open NavDrawer</string>
    <string name="close_navdrawer">Close NavDrawer</string>
    <string name="login_str">Login</string>
    <string name="password_str">Password</string>
    <string name="registration_btn_str">Registration</string>
    <string name="password_confirmation_str">Password Confirmation</string>
    <string name="confirm_btn_str">Confirm</string>
    <string name="registration_title_str">Registration</string>
    <string name="auth_tv_str">Авторизоваться</string>
    <string name="favorite_tracks_str">Favorite Tracks</string>
    <string name="search_music_str">Search music</string>
    <string name="settings_str">SETTINGS</string>
</resources>